// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div class="open-datasets">
  <div class="open-datasets__main">
    <div class="open-datasets__header">
      <bread-crumbs-stub></bread-crumbs-stub>
      <div class="open-datasets__header-main">
        <div class="open-datasets__title-wrapper">
          <!---->
          <dataset-title-stub dataset="[object Object]" class="open-datasets__title"></dataset-title-stub>
        </div>
        <div class="open-datasets__header__tabs">
          <tabs-stub dataset="[object Object]"></tabs-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="open-datasets__content"></div>
  </div>
  <!---->
</div>
`;

exports[`matches snapshot when parentType is "dataset" 1`] = `
<div class="open-datasets">
  <div class="open-datasets__main">
    <div class="open-datasets__header">
      <bread-crumbs-stub></bread-crumbs-stub>
      <div class="open-datasets__header-main">
        <div class="open-datasets__title-wrapper">
          <icon-button-stub to="/dataset" class="open-datasets-details__title__up" tooltip="{'placement':'bottom','content':'Back to Dataset','delay':500}">
            <up-one-level-icon-stub></up-one-level-icon-stub>
          </icon-button-stub>
          <dataset-title-stub dataset="[object Object]" class="open-datasets__title"></dataset-title-stub>
        </div>
        <div class="open-datasets__header__tabs">
          <tabs-stub dataset="[object Object]"></tabs-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="open-datasets__content"></div>
  </div>
  <!---->
</div>
`;

exports[`matches snapshot when parentType is "folder" 1`] = `
<div class="open-datasets">
  <div class="open-datasets__main">
    <div class="open-datasets__header">
      <bread-crumbs-stub></bread-crumbs-stub>
      <div class="open-datasets__header-main">
        <div class="open-datasets__title-wrapper">
          <icon-button-stub to="/folder" class="open-datasets-details__title__up" tooltip="{'placement':'bottom','content':'Back to Dataset','delay':500}">
            <up-one-level-icon-stub></up-one-level-icon-stub>
          </icon-button-stub>
          <dataset-title-stub dataset="[object Object]" class="open-datasets__title"></dataset-title-stub>
        </div>
        <div class="open-datasets__header__tabs">
          <tabs-stub dataset="[object Object]"></tabs-stub>
          <!---->
        </div>
      </div>
    </div>
    <div class="open-datasets__content"></div>
  </div>
  <!---->
</div>
`;
